12-k8s-04-network_parttwo/src/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  labels:
    app: front-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front-deploy
  template:
    metadata:
      labels:
        app: front-deploy
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: frontend
