12-k8s-04-network_parttwo/src/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: default
spec:
  selector:
    app: back-deploy
  ports:
  - name: multitool
    port: 80
  type: ClusterIP
