12-k8s-04-network_parttwo/src/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: default
spec:
  selector:
    app: front-deploy
  ports:
  - name: nginx
    port: 80
  type: ClusterIP
