12-k8s-04-network_parttwo/src/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              name: nginx
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              name: multitool
